### -- configuration file better then setup.py
[build-system] #will use setuptools library for building this package
requires = ["setuptools>=60.0", "wheel"]
build-backends = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.mypy]
mypy_path = "src"
ignore_missing_imports = true

# [project]
# name = "link_lens"
# version = "0.0.1"
# authors = ["MvMukesh <mukeshmanral777@gmail.com>"]
# description = "Python Package link_lens bridges missing link between your digital content and your NoteBook"
# #license = "BSD-3-Clause" 
