### Tip: poetry takes care of dependencies
[metadata]
license = BSD-3-Clause
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
install_requires =
    ensure==2.0.0
    py-youtube==2.0.0
python_requires= >=3.9

[options.extras_require]
testing = 
    pytest>=7.3.0
    mypy>=1.0.0
    flake8>=6.0.0
    tox>=4.0.0
    black>=23.1.0

[options.package_data]
link_lens = py.typed

[flake8]
max-line-length = 160
exclude = __init__.py